Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.9.0
-
None
-
ghx-label-9
Description
IMPALA-3742 introduced KuduPartitionExpr, which takes a row and passes it to the Kudu client to determine what partition it belongs to.
KuduPartitionExpr never calls ScalarExprEvaluator::FreeLocalAllocations, causing it to hang on to memory longer than it needs it.
Since we only need the value of the row for the call into the Kudu client, we can call FreeLocalAllocations after that.
Attachments
Issue Links
- is broken by
-
IMPALA-3742 INSERTs into Kudu tables should partition and sort
- Resolved